# bioacoustics

./: .gitignore  .rfcx_credentials  CLAUDE.md  IDEAs.md  README.md  SCRATCH_PAD.md  TODO.md  pyproject.toml
arch/: cnn.py  coat.py  train_efficientnet_b1.py  train_hybrid.py  transfer_learning_perch.py
docs/: SCRATCH_PAD.md  TASK.md
fine-tune/: config.py  data_loader.py  loss.py  main.py  model.py  predictor.py  taxonomy.py  trainer.py
ssl/: config.py  data_loader.py  loss.py  main.py  model.py  trainer.py
test/: config.py  data_loader.py  main.py  model_loader.py
utils/: audio_processing.py  augmentation.py  config.py  data_utils.py  dataset_analyzer.py  dawn-chorus.py  dawn_chorus.py  device.py  download_utils.py  downloader.py  fix-xeno-canto-data-value.py  load_json_into_duckdb.py  logging.py  model_utils.py  spectrogram_explorer.py  training_utils.py  xeno-canto-brazil-recordings.py  xeno-canto-brazil-stats.py  xeno-canto-generate-spectrogram-for-samples.py  xeno-canto-pick-samples.py  xeno-canto-prepare-datasets-csv.py  xeno_canto.py
