[project]
name = "birdclef"
version = "0.1.0"
description = "birdclef-2025"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "accelerate>=1.0.1",
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "google>=3.0.0",
    "gradio>=4.44.1",
    "httpx>=0.27.2",
    "ipython>=8.12.3",
    "jinja2>=3.1.6",
    "levenshtein>=0.25.1",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "peft; sys_platform == 'linux'",
    "pyright>=1.1.398",
    "requests>=2.32.3",
    "rich>=13.8.1",
    "ruff>=0.9.10",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "unsloth>=2025.3.18; sys_platform=='linux'",
    "vllm>=0.8.2; sys_platform=='linux'",
]


[tool.ruff.lint]
select = [
    "ANN",
    "COM812",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D",
    "EM102",
    "E501",
    "PLR0913",
    "TRY003",
    "W293",
]


[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "./stubs"]
stubPath = "./stubs"
reportMissingImports = "warning" # Or "error" for stricter checks
reportUndefinedVariable = "error"
pythonVersion = "3.12"
# Add venvs paths if needed
# venvPath = "."
# venv = ".venv"
