[project]
name = "birdclef"
version = "0.1.0"
description = "birdclef-2025"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "accelerate>=1.0.1",
    "ai-edge-litert>=1.2.0",
    "audiomentations>=0.40.0",
    "beautifulsoup4>=4.13.3",
    "bioacoustics-model-zoo",
    "black>=25.1.0",
    "boto3>=1.37.23",
    "click>=8.1.8",
    "datasets>=3.1.0",
    "duckdb>=1.2.2",
    "evaluate>=0.4.3",
    "google>=3.0.0",
    "gradio>=4.44.1",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "jinja2>=3.1.6",
    "levenshtein>=0.25.1",
    "librosa>=0.10.0",
    "matplotlib>=3.10.1",
    "mypy-boto3-s3>=1.37.0",
    "numpy>=1.26.4",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "opensoundscape>=0.12.0",
    "pandas>=2.2.3",
    "peft; sys_platform == 'linux'",
    "pillow>=11.1.0",
    "pyright>=1.1.398",
    "pyside6>=6.9.0",
    "requests>=2.32.3",
    "rich>=13.8.1",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "tensorflow>=2.19.0",
    "tflite>=2.18.0",
    "timm>=1.0.15",
    "tk>=0.1.0",
    "torch>=2.5.1",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.7.1",
    "transformers>=4.46.3",
    "wandb>=0.19.9",
]

[tool.setuptools.packages.find]
include = [
  "fine-tune*", 
  "benchmark*", 
  "ssl*", 
  "test*", 
  "utils*", 
]
exclude = [
  "datasets/*",
]


[tool.ruff.lint]
select = [
    "ANN",
    "COM812",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D",
    "EM102",
    "E501",
    "PLR0913",
    "TRY003",
    "W293",
]


[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "./stubs"]
stubPath = "./stubs"
reportMissingImports = "warning" # Or "error" for stricter checks
reportUndefinedVariable = "error"
pythonVersion = "3.12"

[tool.uv.sources]
bioacoustics-model-zoo = { git = "https://github.com/kitzeslab/bioacoustics-model-zoo" }
# Add venvs paths if needed
# venvPath = "."
# venv = ".venv"
